# ai-project

./: LICENSE  pyproject.toml
lesson_assistant/: audio.py  main.py  transcriber.py
output/: aula_transcription.txt
